...
    
    override func viewDidAppear(_ animated: Bool) {
        super.viewDidAppear(animated)
    }
    
    func setupUI() {
        title = "Search Image"
        setupTableView()
        setupSearchController()
    }
    
    func setupTableView() {
        tableView.delegate = self
...
